--- a/src/components/fb/ExistingFidelityBond.module.css
+++ b/src/components/fb/ExistingFidelityBond.module.css
@@ -4,6 +4,10 @@
   padding: 1.25rem;
 }
 
+:root[data-theme='dark'] .container {
+  border-color: var(--bs-gray-700);
+}
+
 .title {
   width: 100%;
   font-size: 1.2rem;
